# norganoid

./: .gitignore  build.sh  dune-project  gen_dist_for_freem.sh  gen_noise.py  index.html  organoids.opam  package-lock.json  run.sh
css/: style.css
js/: main.bc.js
